# C_Coding_Sample

./: CMakeLists.txt  README.md  cdds.glade  cdds.gresource.xml  cdds.h  cdds_application.c  cdds_application.h  cdds_drawingarea.c  cdds_drawingarea.h  cdds_test.c  cdds_test_helper.c  cdds_window.c  cdds_window.h  click_drag_draw_select.kdev4  main.c  non-trivial-examples-and-license  notes  resources.c  subclassingtypes.c
bresenhamlinealgorithm/: CMakeCache.txt  CMakeLists.txt  Makefile  bresenham  bresenham.c  bresenham.h  bresenham.out  cmake_install.cmake
dialogs/: #CDDSDialogNew.glade#  CDDSDialogNew.glade  dialog_new.c  dialog_new.h
geometry/: cdds_geometry_action.c  cdds_geometry_action.h  cdds_geometry_actionmanager.c  cdds_geometry_actionmanager.h  cdds_geometry_line.c  cdds_geometry_line.h  cdds_geometry_linemanager.c  cdds_geometry_linemanager.h  cdds_geometry_point.c  cdds_geometry_point.h  cdds_geometry_pointmanager.c  cdds_geometry_pointmanager.h  cdds_geometry_selection.c  cdds_geometry_selection.h  cdds_geometry_test.c
menus/: point_right_click.c
